Fixed issue where Email button was missing on smaller screens in Contact page.

--- a/src/containers/contact/contact.css
+++ b/src/containers/contact/contact.css
@@ -123,7 +123,6 @@
 
 .eh__contact-btn {
   text-align: center;
-  opacity: 0;
   transition: opacity .5s ease-in-out;
 }
 
